# wc2026-prediction-models

./: .gitignore  ADDENDUM.md  README.md  SPEC.md  companion-spec.md  pyproject.toml
.github/workflows/: refresh-backtest.yml  snapshot-market.yml
data/: backtest.db
data/market/: README.md  matchday_1.example.csv
data/state/: market_map.csv  market_snapshots.csv  match_log.csv
report/: companion.json
scripts/: content_sig.py
src/: backtest.py  build.py  calibrate.py  cli.py  config.py  db.py  elo.py  export.py  fetch.py  fetch_market.py  market.py  model.py  polymarket.py  report.py  scheduler.py  score.py  scorelog.py  state.py
tests/: smoke_test.py  test_backfill.py  test_export.py  test_fetch_market.py  test_log_gate.py  test_scheduler.py  test_scorelog.py  test_state.py  test_versions.py
